--- a/index.html
+++ b/index.html
@@ -358,5 +358,9 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
 
+			<!-- Start of HubSpot Embed Code -->
+  <script type="text/javascript" id="hs-script-loader" async defer src="//js-na1.hs-scripts.com/45674326.js"></script>
+  <!-- End of HubSpot Embed Code -->
+
 	</body>
 </html>
